--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ThreadDeadlock",
+            "request": "launch",
+            "mainClass": "ThreadDeadlock",
+            "projectName": "3_1fc8da"
+        },
+        {
+            "type": "java",
             "name": "InterProcesserCommulation",
             "request": "launch",
             "mainClass": "InterProcesserCommulation",
